gpgrt now has base64 decoder/encoder. Use the API in gpgme to avoid code duplication.
Description
Description
Revisions and Commits
Revisions and Commits
| rM GPGME | |||
| rMec2c6dd8bc49 Use gpgrt_b64dec in libgpg-error. | |||
Related Objects
Related Objects
gpgrt now has base64 decoder/encoder. Use the API in gpgme to avoid code duplication.
| rM GPGME | |||
| rMec2c6dd8bc49 Use gpgrt_b64dec in libgpg-error. | |||